<resources>
    <string name="app_name">Palindrome Checker</string>
    <string name="palindromeText">Palindrome</string>
    <string name="checkText">CHECK</string>
    <string name="nextText">NEXT</string>
    <string name="nameText">Name</string>
    <string name="exampleName">Jhon Doe</string>
    <string name="welcomeText">Welcome</string>
    <string name="chooseText">Choose A User</string>
    <string name="textSelected">Selected User Name :</string>
    <string name="unknown">username has not been selected</string>
    <string name="userFullName">%1$s %2$s</string>
    <string name="emptyStateText">There Is Nothing Here</string>
    <string name="networkErrorMessage">No Internet Connection</string>
    <string name="resultText">RESULT</string>
    <string name="second_screen">SECOND SCREEN</string>
    <string name="third_screen">THIRD SCREEN</string>
</resources>